--- a/问题详细描述.md
+++ b/问题详细描述.md
@@ -572,3 +572,42 @@ curl: (7) Failed connect to 10.211.55.25:80; 拒绝连接
 
 原因： 没装ingress-controller   
 ```
+
+
+
+
+
+# 问题 helm plugin  push 安装不成功
+
+```
+[root@k8s-master helm3]# tar zxf helm-push_0.8.1_linux_amd64.tar.gz -C helm-push
+[root@k8s-master helm3]# cd helm-push/
+[root@k8s-master helm-push]# helm plugin install ./
+Error: plugin already exists
+[root@k8s-master helm-push]# helm plugin ls
+NAME   	VERSION	DESCRIPTION
+cm-push	0.10.3 	Push chart package to ChartMuseum
+[root@k8s-master helm-push]# cd ../
+[root@k8s-master helm3]# ls
+harbor             harbor.ca.crt    helm-push                           helm-v3.2.4-linux-amd64.tar.gz  nginx
+harbor-1.10.1.tgz  harbor-pvc.yaml  helm-push_0.8.1_linux_amd64.tar.gz  linux-amd64
+[root@k8s-master helm-push]# helm push
+Error: unknown command "push" for "helm"
+
+Did you mean this?
+	pull
+
+Run 'helm --help' for usage.
+
+# 注意这里要使用
+helm cm-push
+而不是
+helm push
+
+# 0.10.3版本 使用cm-push 
+# harbor 是当前目录下 chart文件包解压的目录。  ca-file也是当前目录下的文件
+[root@k8s-master helm3]# helm cm-push harbor luffy --ca-file=harbor.ca.crt -u admin -p Harbor12345
+Pushing harbor-1.10.1.tgz to luffy...
+Done.
+```
+
